Add the injection of SVG

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^0.25.0",
     "event-stream": "^3.3.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-inject": "^4.1.0",
     "gulp-sort": "^2.0.0",
